DataStore now uses a custom ValueEntry instead of String value to hold metadata; Expiry metadata added; Bug where errors didn't terminate command execution fixed